--- a/resources/less/components/stockcard.less
+++ b/resources/less/components/stockcard.less
@@ -5,7 +5,7 @@
     display: grid;
     border: solid 1px @gray-hint;
     box-shadow: 1px 1px 0px @gray-hint;
-    grid-template-columns: 80px auto auto; // 80px auto
+    grid-template-columns: 76px auto auto; // 80px auto
     grid-gap: .5rem;
     grid-auto-flow: dense;
     overflow: hidden;
@@ -54,7 +54,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        align-items: flex-end;
+        align-items: center;
         .px-rem(padding, 8);
     }
 
@@ -155,11 +155,11 @@
         }
 
         &.green {
-            color: @green;
+            color: darken(@green, 5%);
         }
 
         &.red {
-            color: @red;
+            color: darken(@red, 8%);
         }
 
     }
